--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.2.5",
     "bootstrap-vue-next": "^0.6.2",
+    "chart.js": "^4.2.1",
     "vue": "^3.2.41",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5",
+    "vue-chartjs": "^5.2.0",
+    "vue-i18n": "^9.3.0-beta.16",
+    "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
