--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@types/chart.js": "^2.9.37",
     "axios": "^1.2.5",
-    "bootstrap-vue-next": "^0.6.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-next": "^0.7.3",
     "chart.js": "^4.2.1",
+    "d3": "^7.8.2",
     "vue": "^3.2.41",
     "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.3.0-beta.16",
@@ -20,6 +24,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.68",
     "@vitejs/plugin-vue": "^3.1.2",
@@ -28,6 +33,7 @@
     "jsdom": "^20.0.1",
     "npm-run-all": "^4.1.5",
     "typescript": "~4.7.4",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^3.1.8",
     "vitest": "^0.24.3",
     "vue-tsc": "^1.0.8"
